@@ -20,7 +20,7 @@ import tachyon.thrift.InvalidPathException;
  */
 public class WebInterfaceMemoryServlet extends HttpServlet {
   private static final long serialVersionUID = 4293149962399443914L;
-  private MasterInfo mMasterInfo;
+  private final transient MasterInfo mMasterInfo;
 
   public WebInterfaceMemoryServlet(MasterInfo masterInfo) {
     mMasterInfo = masterInfo;
@@ -54,7 +54,7 @@ public class WebInterfaceMemoryServlet extends HttpServlet {
         return;
       }
     }
-    request.setAttribute("inMemoryFileNum", new Integer(fileInfos.size()));
+    request.setAttribute("inMemoryFileNum", Integer.valueOf(fileInfos.size()));
 
     // URL is "./memory", can not determine offset and limit, let javascript in jsp determine
     // and redirect to "./memory?offset=xxx&limit=xxx"
